<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/account_textstyle_font_color" />
        <View
            android:id="@+id/vi_font_color"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <Spinner
            android:id="@+id/sp_font_color"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:gravity="right"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/account_textstyle_bubble_color" />
        <View
            android:id="@+id/vi_bubble_color"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <Spinner
            android:id="@+id/sp_bubble_color"
            android:layout_marginStart="20dp"
            android:layout_gravity="right"
            android:spinnerMode="dialog"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/account_textstyle_border_color"/>

        <View
            android:id="@+id/vi_border_color"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <Spinner
            android:id="@+id/sp_border_color"
            android:layout_marginStart="20dp"
            android:layout_gravity="right"
            android:gravity="right"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>

