<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/create_group_name"
            android:hint="请输入群聊名称"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/create_group_person_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"/>
        <Button
            android:id="@+id/create_group_confirm_button"
            android:text="确定"
            android:textColor="#F3F2F4"
            android:background="#3EDA45"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>