...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edit_bg"
            android:hint="@string/account_name"
            android:padding="5dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edit_bg"
            android:hint="@string/account_password"
            android:inputType="textPassword"
            android:padding="5dp"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_bg"
                android:text="@string/account_login"
                android:textColor="@android:color/white"
...
