...
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_now_contacts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_now_contacts"
                android:textColor="@drawable/color_selector_main_activity_rb"
                android:button="@null"
                android:drawableTop="@drawable/icon_selector_now_contacts"
                android:textStyle="bold"/>
            <RadioButton
                android:id="@+id/radio_button_chatgroup"
                android:gravity="center"
                android:text="群聊"
                android:textColor="@drawable/color_selector_main_activity_rb"
                android:button="@null"
                android:textStyle="bold"
                android:drawableTop="@drawable/nowgroup_bg_selector"
...
